# advent-of-code-2021

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs  main.rs
src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  mod.rs
