[package]
name = "aoc2021"
authors = ["Evan Chang <evanc577@gmail.com>"]
description = "Solutions for Advent of Code 2021 (https://adventofcode.com)"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34"
criterion = { version = "0.3", features = [ "html_reports" ] }
itertools = "0.10"
ndarray = "0.15"
rayon = "1.5"
rustc-hash = "1.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[lib]
bench = false

[[bin]]
name = "aoc2021"
path = "src/main.rs"
bench = false

[[bench]]
name = "benchmark"
harness = false
